--- a/padrino/restful-api/Gemfile
+++ b/padrino/restful-api/Gemfile
@@ -15,4 +15,5 @@ group :test do
   gem 'factory_girl'
   gem 'faker'
   gem 'database_cleaner'
+  gem 'codeclimate-test-reporter', require: nil
 end
