--- a/padrino/restful-api/Gemfile
+++ b/padrino/restful-api/Gemfile
@@ -5,8 +5,12 @@ gem 'rake'
 gem 'activerecord', '>= 3.1', :require => 'active_record'
 gem 'sqlite3'
 gem 'padrino', '0.13.0'
-gem 'pry-byebug'
 gem 'email_validator'
+
+group :development do
+  gem 'rubocop', :require => false
+  gem 'pry-byebug'
+end
 
 group :test do
   gem 'rack-test', :require => 'rack/test'
