--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,4 @@ language: ruby
 rvm:
  - "2.2.3"
 # uncomment this line if your project needs to run something other than `rake`:
-script: RACK_ENV=test bundle exec padrino rake ae:migrate
-script: bundle exec rspec spec
+script: bundle exec rspec
